# shadowbid

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json
app/: .env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/auction/[id]/: page.tsx
app/src/app/auction/create/: page.tsx
app/src/app/auctions/: page.tsx
app/src/app/my-auctions/: page.tsx
app/src/app/my-bids/: page.tsx
app/src/components/auction/: AuctionActions.tsx  AuctionCard.tsx  BidForm.tsx  CreateAuctionForm.tsx  CreateAuctionModal.tsx
app/src/components/layout/: Footer.tsx  Header.tsx  LayoutWrapper.tsx  Sidebar.tsx
app/src/components/providers/: ModalProvider.tsx  QueryProvider.tsx  WalletProvider.tsx  index.tsx
app/src/components/ui/: Card.tsx  Countdown.tsx
app/src/hooks/: useAuction.ts  useAuctions.ts  useEncryption.ts
app/src/lib/: constants.ts  encryption.ts  pda.ts  program.ts  utils.ts
app/src/lib/idl/: shadowbid.json  shadowbid.ts
programs/shadowbid/: Cargo.toml
programs/shadowbid/src/: constants.rs  errors.rs  events.rs  lib.rs
programs/shadowbid/src/instructions/: cancel_auction.rs  close_bidding.rs  create_auction.rs  determine_winner.rs  finalize_winner.rs  mod.rs  place_bid.rs  settle_auction.rs
programs/shadowbid/src/state/: auction.rs  bid.rs  mod.rs
tests/: shadowbid.ts
