[package]
name = "shadowbid"
version = "0.1.0"
description = "Sealed-bid auction protocol with Inco Lightning confidential computing"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shadowbid"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
inco-lightning = { version = "0.1.4", features = ["cpi"] }
